tests/rosetta/out/Rust/accumulator-factory.error
rustc error: exit status 1
error[E0308]: mismatched types
 --> /tmp/TestMochiToRustaccumulator-factory4010452463/001/prog.rs:9:16
  |
3 |     fn accumulator(sum: i32) -> Box<dyn Fn(i32) -> i32> {
  |                                 ----------------------- expected `Box<(dyn Fn(i32) -> i32 + 'static)>` because of return type
4 |         let mut store: Vec<i32> = vec![sum];
5 |         let add = move |nv: i32| -> i32 {
  |                   --------------------- the found closure
...
9 |         return add;
  |                ^^^ expected `Box<dyn Fn(i32) -> i32>`, found closure
  |
  = note: expected struct `Box<(dyn Fn(i32) -> i32 + 'static)>`
            found closure `{closure@/tmp/TestMochiToRustaccumulator-factory4010452463/001/prog.rs:5:19: 5:40}`
  = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
help: store this in the heap by calling `Box::new`
  |
9 |         return Box::new(add);
  |                +++++++++   +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustaccumulator-factory4010452463/001/prog.rs:15:26
   |
15 |         println!("{}", x(2.3).to_string());
   |                        - ^^^ expected `i32`, found floating-point number
   |                        |
   |                        arguments to this function are incorrect
   |
note: implementation defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/boxed.rs:1978:1

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
