tests/rosetta/out/Rust/accumulator-factory.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:39Z
fn main() {
    fn accumulator(sum: i32) -> Box<dyn Fn(i32) -> i32> {
        let mut store: Vec<i32> = vec![sum];
        let add = move |nv: i32| -> i32 {
            store[0] = store[0] + nv;
            return store[0];
        };
        return add;
    }
    fn main() -> () {
        let x = accumulator(1);
        x(5);
        accumulator(3);
        println!("{}", x(2.3).to_string());
    }
    main();
}
